Release history for Net-Travis-API

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: +1 ↓1 (recommends: ↑1)
 - develop: +18 ↑3 -6 (recommends: +1, suggests: +2 -1)
 - runtime: (recommends: +1)
 - test: +2 -3 (recommends: ↑2 ↓1 -1)

0.001001 2014-04-22T11:33:16Z
 [01 Documentation Fix]
 - Unclosed "if { }" in the synopsis for UA.pm, thanks Brendan Byrd

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: ↑1
 - test: (recommends: ↑2)

0.001000 2014-02-13T17:16:48Z
 - Super Early First Release with minimal utility available.

 [Dependencies::Aggregate]
 - 5.10: 44
 - 5.19: 28
 - Chokepoint for having Module::Build is presently Module::Runtime