@@ -1,6 +1,10 @@
 Release history for Net-Travis-API
 
 {{$NEXT}}
+ - Now uses Travis-CI API-v2 by default for all queries. Can be overridden by explicit use of an alternative
+   "http_default_accept_headers" or by having a predefined "Accept" value in HTTP::Tiny's default_headers parameter.
+   @zmughal++ closes #3, closes #4
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001001, see misc/*.deps* for details
  - configure: +1 ↓1 (recommends: ↑1)
